[package]
name = "prople-did-core"
version = "1.0.0"
edition = "2021"
authors = ["rstlix0x0 <rstlix.dev@gmail.com>"]
repository = "https://github.com/prople/did"
rust-version = "1.74"
description = "A set of libraries and function helpers to maintain DID (Decentralized Identity)"
license = "GPL-3.0-only"
keywords = ["prople", "cryptography"]
categories = ["cryptography"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rst-common = {version = "1.1.0", features = ["standard", "with-errors", "with-tokio", "with-logging", "with-cryptography", "with-tests"]}
serde_jcs = {version ="0.1"}
multibase = {version = "0.9"} 
prople-crypto = {git = "https://github.com/prople/crypto.git"}