[package]
name = "prople-did-core"
version = "0.1.1"
edition = "2021"
authors = ["rstlix0x0 <rstlix.dev@gmail.com>"]
documentation = "https://docs.rs/prople-did-core"
repository = "https://github.com/prople/did"
rust-version = "1.74"
description = "A set of core libraries to manage the DID data and objects based on Prople system requirements"
license = "GPL-3.0-only"
keywords = ["prople", "cryptography"]
categories = ["cryptography"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rst-common = {version = "1.2.0", features = ["standard", "with-errors", "with-tokio", "with-logging", "with-cryptography", "with-tests"]}
serde_jcs = {version ="0.1"}
multibase = {version = "0.9"} 
prople-crypto = {version = "~0.2"}

[lib]
doctest = false